message("")
message(":::::::::::::::::::::::::")
message("::VideoCapture:: Examples")

# message("")
# message(":::::::::::::::::::::::::::::::::::::::::::::::")
# message("::VideoCapture:: Examples - simple_decode")
# message("")
# add_subdirectory(simple_decode)

# message("")
# message("::::::::::::::::::::::::::::::::::::::::::::::::::::")
# message("::VideoCapture:: Examples - comparison_opencv_ffmpeg")
# message("")
# add_subdirectory(comparison_opencv_ffmpeg)

# message("")
# message(":::::::::::::::::::::::::::::::::::::::::::::::")
# message("::VideoCapture:: Examples - video_player_opencv")
# message("")
# add_subdirectory(video_player_opencv)

# message("")
# message(":::::::::::::::::::::::::::::::::::::::::::")
# message("::VideoCapture:: Examples - video_player_qt")
# message("")
# add_subdirectory(video_player_qt)

message("")
message(":::::::::::::::::::::::::::::::::::::::::::")
message("::VideoCapture:: Examples - video_player_queue")
message("")
add_subdirectory(video_player_queue)