set(TARGET_NAME simple_decode)
add_executable(${TARGET_NAME} ${TARGET_NAME}.cpp)
target_link_libraries(${TARGET_NAME} PRIVATE video_capture)

if(${VCPP_ADDRESS_SANITIZER})
    if(NOT CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        message(FATAL_ERROR "Sanitizer supported only for gcc/clang")
    endif()
    message(STATUS "Address sanitizer enabled")
    target_compile_options(${TARGET_NAME} PRIVATE -g -fsanitize=address,undefined)
    target_compile_options(${TARGET_NAME} PRIVATE -fno-sanitize=signed-integer-overflow)
    target_compile_options(${TARGET_NAME} PRIVATE -fno-sanitize-recover=all)
    target_compile_options(${TARGET_NAME} PRIVATE -fno-omit-frame-pointer)
    target_link_libraries(${TARGET_NAME} PRIVATE -fsanitize=address,undefined -fuse-ld=gold)
endif()