set(TARGET_NAME simple_decode)
add_executable(${TARGET_NAME} ${TARGET_NAME}.cpp)
target_link_libraries(${TARGET_NAME} PRIVATE video_capture)

if(${VCPP_BUILD_SANITIZERS})
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        message(STATUS "Sanitizers enabled: address,undefined,memory,thread")
        target_compile_options(${TARGET_NAME} PRIVATE -g -fsanitize=address,undefined,memory,thread)
        target_compile_options(${TARGET_NAME} PRIVATE -fno-sanitize=signed-integer-overflow)
        target_compile_options(${TARGET_NAME} PRIVATE -fno-sanitize-recover=all)
        target_compile_options(${TARGET_NAME} PRIVATE -fno-omit-frame-pointer)
        target_link_libraries(${TARGET_NAME} PRIVATE -fsanitize=address,undefined,memory,thread -fuse-ld=gold)
    elseif(MSVC)
        message(STATUS "Sanitizers enabled: address")
        target_compile_options(${TARGET_NAME} PRIVATE -fsanitize=address)
    endif()
endif()